kubernetes/06-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: employee
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  type: ClusterIP
