kubernetes/08-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: employee
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30017
  type: NodePort
