kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: employee
spec:
  rules:
  - host: myapp.localdev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend-service
            port:
              number: 80
